[package]
name = "pinocchio_fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []
std = []

[dependencies]
pinocchio = "0.10.2"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.3.0"
wincode ={version= "0.4.4",features = ["derive"]}
bytemuck = { version = "1.25.0", features = ["derive"] }
pinocchio-pubkey = "0.3.0"

[dev-dependencies]
litesvm = "0.10.0"
litesvm-token = "0.10.0"

solana-instruction = "3.0"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-pubkey = "4.0"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-message = "3.0.1"
solana-sdk-ids = "3.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = "8.0.0"
solana-rpc-client = "3.1.9"
solana-address = "2.0"
solana-account = "3.2.0"
solana-sdk = "3.0.0"
